[workspace]
members = [
    "zinc64-core",
    "zinc64-emu",
    "zinc64-debug",
    "zinc64-loader",
    "zinc64-raspi",
    "zinc64"
]
default-members = [
    "zinc64-core",
    "zinc64-emu",
    "zinc64-debug",
    "zinc64-loader",
    "zinc64"
]

[profile.release]
codegen-units = 1
debug = true
lto = true
