[workspace]
members = [
    "zinc64",
    "zinc64-core",
    "zinc64-emu",
    "zinc64-debug",
    "zinc64-loader",
    "zinc64-raspi",
    "raspi3_boot"
]
default-members = [
    "zinc64-core",
    "zinc64-emu",
    "zinc64-debug",
    "zinc64-loader",
    "zinc64"
]

[profile.release]
codegen-units = 1
debug = true
lto = true
