[package]
name = "zinc64-core"
version = "0.8.0"
authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
edition = "2018"
description = "Commodore 64 emulator debugger support"
license = "GPL-3.0+"
repository = "https://github.com/binaryfields/zinc64"
readme = "../README.md"
keywords = ["c64", "commodore", "emulator", "no_std"]
categories = ["emulators"]

[features]
default = ["std"]
std = []

[dependencies]
bit_field = "0.10"
