[package]
name = "zinc64-debug"
version = "0.7.0-pre"
authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
edition = "2018"
description = "Commodore 64 emulator debugger support"
license = "GPL-3.0+"
repository = "https://github.com/digitalstreamio/zinc64"
readme = "README.md"
keywords = ["c64", "commodore", "emulator"]
categories = ["emulators"]

[dependencies]
bit_field = "0.9"
byteorder = "1.2"
log = "0.3"
zinc64 = { path = "..", version = "0.7.0-pre" }
