[package]
name = "zinc64-debug"
version = "0.9.0"
authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
edition = "2018"
description = "Commodore 64 emulator debugger support"
license = "GPL-3.0+"
repository = "https://github.com/binaryfields/zinc64"
readme = "../README.md"
keywords = ["c64", "commodore", "emulator"]
categories = ["emulators"]

[dependencies]
bit_field = "0.10"
byteorder = "1.5"
log = "0.3"
zinc64-core = { path = "../zinc64-core", version = "0.9" }
