[package]
name = "zinc64-emu"
version = "0.8.0"
edition = "2018"
authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
description = "Commodore 64 emulator toolkit with batteries included but swappable"
license = "GPL-3.0+"
repository = "https://github.com/digitalstreamio/zinc64"
readme = "README.md"
keywords = ["c64", "commodore", "emulator"]
categories = ["emulators"]
exclude = [ "bin/*", "doc/*", "res/*" ]

[features]
default = ["std"]
std = []

[dependencies]
bit_field = "0.9"
byteorder = "1.2"
log = "0.3"
resid-rs = "1.0"
zinc64-core = { path = "../zinc64-core" }
