[package]
name = "zinc64-emu"
version = "0.8.0"
edition = "2018"
authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
description = "Commodore 64 emulator toolkit with batteries included but swappable"
license = "GPL-3.0+"
repository = "https://github.com/digitalstreamio/zinc64"
readme = "README.md"
keywords = ["c64", "commodore", "emulator", "no_std"]
categories = ["emulators"]
exclude = [ "bin/*", "doc/*", "res/*" ]

[features]
default = ["std"]
std = []

[dependencies]
bit_field = "0.9"
log = { version = "0.3", default-features = false }
resid-rs = { version = "1.0", default-features = false }
zinc64-core = { path = "../zinc64-core", default-features = false  }
