[package]
name = "zinc64-loader"
version = "0.6.0"
authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
description = "Commodore 64 emulator loader support"
license = "GPL-3.0+"
repository = "https://github.com/digitalstreamio/zinc64"

[dependencies]
bit_field = "0.9"
byteorder = "1.2"
log = "0.3"
zinc64 = { path = "..", version = "0.6.0" }
