[package]
name = "zinc64-loader"
version = "0.8.0"
authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
edition = "2018"
description = "Commodore 64 emulator loader support"
license = "GPL-3.0+"
repository = "https://github.com/binaryfields/zinc64"
readme = "../README.md"
keywords = ["c64", "commodore", "emulator", "no_std"]
categories = ["emulators"]

[features]
default = ["std"]
std = []

[dependencies]
byteorder = { version = "1.5", default-features = false }
log = { version = "0.3", default-features = false }
zinc64-emu = { path = "../zinc64-emu", version = "0.8" }
