[package]
name = "zinc64-raspi"
version = "0.8.0"
authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
edition = "2018"
description = "Commodore 64 emulator Raspberry Pi client"
license = "GPL-3.0+"
repository = "https://github.com/digitalstreamio/zinc64"
readme = "README.md"
keywords = ["c64", "commodore", "emulator", "no_std", "arm", "bare-metal", "raspi"]
categories = ["emulators"]
publish = false

[dependencies]
byteorder = { version = "1.2", default-features = false }
cortex-a = "2.3.1"
linked_list_allocator = "0.6.3"
log = { version = "0.3", default-features = false }
raspi3_boot = { path = "../raspi3_boot" }
register = "0.3.2"
zinc64-core = { path = "../zinc64-core", default-features = false }
zinc64-emu = { path = "../zinc64-emu", default-features = false }
