[package]
name = "zinc64-system"
version = "0.9.0"
edition = "2018"
authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
description = "Commodore 64 emulator toolkit with batteries included but swappable"
license = "GPL-3.0+"
repository = "https://github.com/binaryfields/zinc64"
readme = "../README.md"
keywords = ["c64", "commodore", "emulator", "no_std"]
categories = ["emulators"]
exclude = [ "bin/*", "doc/*", "res/*" ]

[features]
default = ["std"]
std = []

[dependencies]
bit_field = "0.10"
log = { version = "0.3", default-features = false }
resid-rs = { version = "1.0" }
zinc64-core = { path = "../zinc64-core", version = "0.9" }
