[package]
name = "zinc64"
version = "0.9.0"
authors = ["Sebastian Jastrzebski <sebby2k@gmail.com>"]
edition = "2018"
description = "Commodore 64 emulator app"
license = "GPL-3.0+"
repository = "https://github.com/binaryfields/zinc64"
readme = "../README.md"
keywords = ["c64", "commodore", "emulator"]
categories = ["emulators"]

[dependencies]
anyhow = "1.0"
bit_field = "0.10"
byteorder = "1.5"
cgmath = "0.18"
cpal = "0.15.2"
glow="0.13"
glutin = "0.29"
log = "0.3"
structopt = "0.3"
zinc64-core = { path = "../zinc64-core", version = "0.8" }
zinc64-emu = { path = "../zinc64-emu", version = "0.8" }
zinc64-debug = { path = "../zinc64-debug", version = "0.8" }
zinc64-loader = { path = "../zinc64-loader", version = "0.8" }
